add housekeeping adaptive configuration